# OGG-Extractor

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  OGGContainerWrapper.cpp  OGGContainerWrapper.h  OGGExtractor.cpp  OGGExtractor.h  OGGExtractor.ui  ScanThread.cpp  ScanThread.h  TableModel.cpp  TableModel.h  Utils.cpp  Utils.h  item.ui  main-cli.cpp  main.c  main.cpp  makefile  readme.md  readme.txt  resources.rc.in
installer/: script.iss.in
rsc/: resources.qrc
